# FazAConta-backend

./: .env.test  .gitignore  Dockerfile  README.md  api.http  curl.txt  docker-compose.yml  example.py  index.html  pyproject.toml  uml.puml  users.http
fazaconta_backend/: main.py
fazaconta_backend/common/domain/: business_rule.py  entity.py  exceptions.py  mixins.py  services.py  value_objects.py
fazaconta_backend/config/: __init__.py  settings.py
fazaconta_backend/modules/group/domain/: Group.py  GroupDetail.py  Member.py  Participant.py  PendingPayment.py  Transaction.py  TransactionType.py  Transference.py  exceptions.py
fazaconta_backend/modules/group/dtos/: GroupDTO.py  MemberDTO.py  ParticipantDTO.py  PendingPaymentDTO.py  TransactionDTO.py  (+1 more)
fazaconta_backend/shared/application/: UseCase.py
fazaconta_backend/shared/domain/: AbstractGenericRepository.py  BusinessRule.py  BusinessRuleValidationMixin.py  DomainService.py  Entity.py  Guard.py  IGenericRepository.py  Identifier.py  UniqueEntityId.py  UseCase.py  ValueObject.py
fazaconta_backend/shared/exceptions/: BusinessRuleValidationException.py  DomainException.py
fazaconta_backend/src/: application.py  commands.py  main.py  todos.py
fazaconta_backend/src/config/: lato_app.py
fluxogramas/: Fluxogramas.md  acertarSaldos.puml  adicionarMembro.puml  autenticar.puml  criarGrupo.puml  criarTransacao.puml  visualizarSaldos.puml
http/: group.http  session.http  transaction.http  transference.http  user.http  users.http
localstack/cache/: machine.json
scripts/: aws-init.sh
uml/: uml.puml
(+124 files in other folders)
