[tool.poetry]
name = "fazaconta-backend"
version = "0.1.0"
description = ""
authors = ["João Pedro Lima Pirajá <jplp100@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"
lato = "^0.11.1"
beanie = "^1.27.0"
setuptools = "^75.6.0"
redis = "^5.2.0"
pydantic-settings = "^2.6.1"
pydantic = "^2.10.2"
bcrypt = "^4.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^24.10.0"
isort = "^5.13.2"
poethepoet = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
profile = "black"

[tool.poe.tasks]
start = "python fazaconta_backend/main.py"
format = "black ."
sort-imports = "isort ."
lint = ["format", "sort-imports"]
test-command = "pytest -s -x --cov=fazaconta_backend -vv"
coverage-html = "coverage html"
test = ["lint", "test-command", "coverage-html"]